force-app/main/default/objects/Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appetizers</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
            <value>
                <fullName>Soup</fullName>
            </value>
            <value>
                <fullName>Salads</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Omelettes</fullName>
            </value>
            <value>
                <fullName>Sandwiches</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Choice of Bread</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Juice</fullName>
            </value>
            <value>
                <fullName>Main Course</fullName>
                <isActive>false</isActive>
                <label>Main Course</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>