force-app/main/default/objects/Item__c/fields/Vegan__c.field-meta.xml
<CustomField>
    <fullName>Vegan__c</fullName>
    <label>Vegan</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Veg_Non_Veg__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>