force-app/main/default/objects/Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Price__c</columns>
    <columns>Veg_Non_Veg__c</columns>
    <columns>Vegan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>